# tinystories

./: .gitignore  README.md  RUNS.md  build_pruned_tokenizer.py  generate.py  gpt.py  gpt_teacher.py  main.py  plot_loss.py  pyproject.toml  train.py  vocab_coverage.py  vocab_usage.py
data/bpe_16384/: tokenizer.json
data/bpe_4096/: tokenizer.json
data/qwen3_pruned/: tokenizer.json
tok/: __init__.py  base.py  bpe.py  pruned_hf.py
