[project]
name = "tinystories"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.14.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "polars>=1.40.1",
    "tokenizers>=0.22,<0.24",
    "torch>=2.11.0",
    "transformers>=4.50",
]
